@@ -1,3 +1,5 @@
+* Changed type of field property_state to required selection with default value
+
 Version 3.4.4 - 2015-12-21
 * Require version 0.16 of retrofix library
 * Fix declaration_number and previous_declaration_number computation
